--- a/src/locale/messages.zh-Hans.xlf
+++ b/src/locale/messages.zh-Hans.xlf
@@ -17,35 +17,42 @@
         </context-group>
       </trans-unit>
       <trans-unit id="5541757004565024527" datatype="html">
-        <source>路线详情</source>
+        <source>车站详情</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">12</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7522273064270292227" datatype="html">
-        <source>菜单</source>
+        <source>路线详情</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">18</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2102825898069375693" datatype="html">
+        <source>菜单</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/app.component.html</context>
+          <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2812108764688288077" datatype="html">
         <source>虚线</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/interchange-style-toggle/interchange-style-toggle.component.ts</context>
-          <context context-type="linenumber">23</context>
+          <context context-type="linenumber">25</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5482024014385217232" datatype="html">
         <source>空心线</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/interchange-style-toggle/interchange-style-toggle.component.ts</context>
-          <context context-type="linenumber">28</context>
+          <context context-type="linenumber">30</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/visibility-toggle/visibility-toggle.component.ts</context>
-          <context context-type="linenumber">35</context>
+          <context context-type="linenumber">37</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6430497685257244247" datatype="html">
@@ -108,14 +115,14 @@
         <source>车站</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/search/search.component.ts</context>
-          <context context-type="linenumber">76</context>
+          <context context-type="linenumber">77</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6784952512362771698" datatype="html">
         <source>路线</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/search/search.component.ts</context>
-          <context context-type="linenumber">83</context>
+          <context context-type="linenumber">84</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/station-panel/station-panel.component.html</context>
@@ -137,7 +144,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="7023594088317898788" datatype="html">
-        <source>在地图上聚焦</source>
+        <source>在线路图上聚焦</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/station-panel/station-panel.component.html</context>
           <context context-type="linenumber">13</context>
@@ -168,21 +175,21 @@
         <source>隐藏</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/visibility-toggle/visibility-toggle.component.ts</context>
-          <context context-type="linenumber">25</context>
+          <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
       <trans-unit id="592980626739521579" datatype="html">
         <source>实线</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/visibility-toggle/visibility-toggle.component.ts</context>
-          <context context-type="linenumber">30</context>
+          <context context-type="linenumber">32</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6113179921997948226" datatype="html">
         <source>虚线</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/component/visibility-toggle/visibility-toggle.component.ts</context>
-          <context context-type="linenumber">40</context>
+          <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4172345182949733528" datatype="html">
@@ -242,7 +249,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="2735224459503660581" datatype="html">
-        <source>小型巴士</source>
+        <source>迷你巴士</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/data/routeType.ts</context>
           <context context-type="linenumber">15</context>
